added removing tasks, fixeg bug: when no task was on the list, it didnt render

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <main>
         <form class="js-form">
-            <input class="js-newTask">
-            <button class="js-button">Add task</button>
+            <input class="js-newTask" autofocus>
+            <button>Add task</button>
         </form>
 
         <ul class="taskList js-taskList"></ul>
