--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="css/taskList.css">
-
-
+    <link rel="stylesheet" href="css/section.css">
 
 </head>
 
 <body class="body">
+    <header class="header_h1">
+        <h1>My to-do list</h1>
+    </header>
 
-    <header class="header">My to-do list</header>
+    <main class="main">
 
-    <main>
-        <form class="js-form">
-            <input class="js-newTask" autofocus>
-            <button>Add task</button>
-        </form>
+        <div class="section">
+            <h2 class="header_h2"> Add new task</h2>
+            <form class="js-form section__body">
+                <input class="js-newTask" autofocus placeholder="New task name...">
+                <button>Add task</button>
+            </form>
+        </div>
 
-        <ul class="taskList js-taskList"></ul>
+        <div class="section">
+            <h2 class="header_h2"> Task list:</h2>
+            <ul class="section__body js-taskList"></ul>
+        </div>
+
     </main>
-
 </body>
 
 </html>
