buttons styled in css with different colors and emojis

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="section">
             <h2 class="header_h2"> Add new task</h2>
             <form class="js-form section__body">
-                <input class="js-newTask" autofocus placeholder="New task name...">
-                <button>Add task</button>
+                <input class="js-newTask form__input" autofocus placeholder="New task name...">
+                <button class="form__button">Add task</button>
             </form>
         </div>
 
