added opengraph image

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/section.css">
-    <link rel="icon" href="\images\notebookicon.png">
-    <meta property="og:image" content="images\cube.png">
+    <link rel="icon" href="images/notebookicon.png">
+    <meta property="og:image" content="images/notebookpaper.jpg">
 
 </head>
 
