--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         </div>
 
         <div class="section">
-            <h2 class="header__h2"> Task list:</h2>
-            <ul class="section__body js-taskList"></ul>
+            <h2 class="header__h2 taskListRow"> <span>Task list:</span>
+                <span class="js-taskListButtonRow taskListButtonRow"></span></h2>
+            <ul class="js-taskList section__body"></ul>
         </div>
 
     </main>
